===v8.1.3===
* New DogTag: MaxDuration

====Bug Fixes====
* Fixed an issue that would cause unintentional renaming of text layouts. 

===v8.1.2===
* Restored the old Buff/Debuff duration percentage conditions, since they still have applications for variable-duration effects like Rogue DoTs.

====Bug Fixes====
* Attempted a permanant fix to very rare and very old bug where some users' includes.*.xml files were getting scrambled around in their TMW install, leading to the problem of most of the addon not getting loaded.
* Fixed an issue with Condition-triggered animations not working consistently in controlled groups.
* Buff/Debuff Duration conditions should once again work properly with effects that have no duration.
* Fixed an issue with occasional missing checkboxes in condition configuration
* Fixed resource percentage conditions
* Fixed a rare bug that would cause cooldown sweep animations to totally glitch out, usually in meta icons.

===v8.1.1===
====Bug Fixes====
* IconType_cooldown\cooldown.lua:295: attempt to index field 'HELP' (a nil value)

===v8.1.0===
* New group layout option: Shrink Group. For dynamically centering groups.
* Added new Notification triggers for stacks increased/decreased

====Bug Fixes====
* Fixed the behavior of the Ignore Runes setting.
* Fixed Soul Shards condition - correct maximum is 6.
* Made the Last Ability Used condition not suck.
* Totem icon configuration should be back to its former glory.

===v8.0.3===
====Bug Fixes====
* Fixed creation of new profiles

===v8.0.2===
====Bug Fixes====
* Fixed: TellMeWhen\Components\Core\Icon.lua:491 attempt to index field 'typeData' (a nil value)

===v8.0.1===
====Bug Fixes====
* Fixed Maelstrom condition - correct maximum is 150.

===v8.0.0===
====Breaking Changes====
* There is a small chance you will need to reconfigure the spec settings on all your groups.
* Most of your old color settings were lost.
